# powerbi_demo_PBIPxGHCopilot

./: .env.example  .gitignore  AGENT.md  LICENSE  README.md  powerbi_rest_api_demo.ipynb  presentation_package.md  pyproject.toml  requirements.txt
config/: .env.example  README.md  settings.example.json  settings.example.yaml
data/: dim_channel.csv  security_region_access.csv
docs/: README.md  architecture.md  architecture_flows.md  auth_decision_guide.md  enterprise-setup.md  github_repo_showcase.md  integration-overview.md  linkedin-post.md  measure-validation.md  notebook-demo-flow.md  pbip_sample_design.md  presentation_package.md  presenter_demo_script.md  presenter_notes_th.md  setup_checklist.md  testing-strategy.md  troubleshooting.md
notebooks/: 01_delegated_auth_demo.ipynb  02_service_principal_demo.ipynb  03_measure_validation_showcase.ipynb  90_legacy_powerbi_rest_api_demo.ipynb  README.md  powerbi_rest_api_demo.ipynb
pbip/: README.md  demo_dataset.pbip
powerbi/: README.md
references/: dependencies.md  known-limitations.md  tooling.md
scripts/: README.md  __init__.py  auth_delegated_user.py  auth_service_principal.py  config_loader.py  demo_dataset_mcp_smoke_test.py  evaluate_pbip_for_testing.py  execute_dax_query.py  generate_measure_test_scenarios.py  generate_measure_validation_template.py  improve_demo_dataset_best_practices.py  list_datasets.py  list_workspaces.py  powerbi_client.py  powerbi_modeling_mcp_common.py  setup_powerbi_modeling_mcp.py
src/: README.md  __init__.py
src/common/: io.py  (+4 more)
test-results/: README.md
tests/: README.md
(+202 files in other folders)
